// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ignored-trailing-comment.jsx - {"printWidth":20} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 20
    printWidth: 20 |
=====================================input======================================
class A extends (/* prettier-ignore */ <Tag  raw = "value" /> // trailing
) {}

class Fragment extends (/* prettier-ignore */ <>{/* inside */}<Tag  raw = "value" /></> // fragment
) {}

let Expression = class extends (/* prettier-ignore */ <Tag  raw = "value" /> // expression
) {};

Expression = class extends (/* prettier-ignore */ <Tag  raw = "value" /> // assignment
) {
  method() {}
};

class LeadingLine extends (
  // prettier-ignore
  <Tag  raw = "value" />
) {}

class InternalComments extends (/* prettier-ignore */ <Tag  raw = {/* inside */ value} />) {}

class Mixed extends (/* before */ /* prettier-ignore */ <Tag  raw = "value" /> /* after */) {}

const IgnoredFragment = class extends (/* prettier-ignore */ <>  raw text  </> /* after */) {};

=====================================output=====================================
class A
  extends (
    /* prettier-ignore */ <Tag  raw = "value" /> // trailing
  ) {}

class Fragment
  extends (
    /* prettier-ignore */ <>{/* inside */}<Tag  raw = "value" /></> // fragment
  ) {}

let Expression = class
  extends (
    /* prettier-ignore */ <Tag  raw = "value" /> // expression
  ) {};

Expression = class
  extends (
    (
      /* prettier-ignore */ <Tag  raw = "value" /> // assignment
    )
  )
{
  method() {}
};

class LeadingLine
  extends (
    // prettier-ignore
    <Tag  raw = "value" />
  ) {}

class InternalComments
  extends (
    /* prettier-ignore */ <Tag  raw = {/* inside */ value} />
  ) {}

class Mixed
  extends (
    /* before */ /* prettier-ignore */ <Tag  raw = "value" /> /* after */
  ) {}

const IgnoredFragment = class
  extends (
    /* prettier-ignore */ <>  raw text  </> /* after */
  ) {};

================================================================================
`;

exports[`ignored-trailing-comment.jsx format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class A extends (/* prettier-ignore */ <Tag  raw = "value" /> // trailing
) {}

class Fragment extends (/* prettier-ignore */ <>{/* inside */}<Tag  raw = "value" /></> // fragment
) {}

let Expression = class extends (/* prettier-ignore */ <Tag  raw = "value" /> // expression
) {};

Expression = class extends (/* prettier-ignore */ <Tag  raw = "value" /> // assignment
) {
  method() {}
};

class LeadingLine extends (
  // prettier-ignore
  <Tag  raw = "value" />
) {}

class InternalComments extends (/* prettier-ignore */ <Tag  raw = {/* inside */ value} />) {}

class Mixed extends (/* before */ /* prettier-ignore */ <Tag  raw = "value" /> /* after */) {}

const IgnoredFragment = class extends (/* prettier-ignore */ <>  raw text  </> /* after */) {};

=====================================output=====================================
class A
  extends (
    /* prettier-ignore */ <Tag  raw = "value" /> // trailing
  ) {}

class Fragment
  extends (
    /* prettier-ignore */ <>{/* inside */}<Tag  raw = "value" /></> // fragment
  ) {}

let Expression = class
  extends (
    /* prettier-ignore */ <Tag  raw = "value" /> // expression
  ) {};

Expression = class
  extends (
    (
      /* prettier-ignore */ <Tag  raw = "value" /> // assignment
    )
  )
{
  method() {}
};

class LeadingLine
  extends (
    // prettier-ignore
    <Tag  raw = "value" />
  ) {}

class InternalComments
  extends (/* prettier-ignore */ <Tag  raw = {/* inside */ value} />) {}

class Mixed
  extends (
    /* before */ /* prettier-ignore */ <Tag  raw = "value" /> /* after */
  ) {}

const IgnoredFragment = class
  extends (/* prettier-ignore */ <>  raw text  </> /* after */) {};

================================================================================
`;

exports[`superclass.jsx - {"printWidth":20} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 20
    printWidth: 20 |
=====================================input======================================
class Leading extends (/* leading */ <Component />) {}

class Trailing extends (<Component /> /* trailing */) {}

class Both extends (/* before */ <Component /> /* after */) {}

class LeadingLine extends (
  // leading line
  <Component />
) {}

class TrailingLine extends (
  <Component /> // trailing line
) {}

class Fragment extends (/* fragment */ <>child</>) {}

let Expression = class extends (<Component /> /* expression */) {};

Expression = class extends (/* assignment */ <Component />) {};

class Nested extends (
  /* nested */ <Component><Child /></Component> /* end */
) {
  method() {}
}

class Ordinary extends (/* ordinary */ createClass()) {}

class Ignored extends (/* prettier-ignore */ <Component  unformatted = "value" />) {}

Expression = class extends (/* long before */ <Component attribute="a long attribute that wraps at narrow widths"><Child /></Component> /* long after */) {
  method() {}
};

=====================================output=====================================
class Leading
  extends (
    /* leading */ <Component />
  ) {}

class Trailing
  extends (
    <Component /> /* trailing */
  ) {}

class Both
  extends (
    /* before */ <Component /> /* after */
  ) {}

class LeadingLine
  extends (
    // leading line
    <Component />
  ) {}

class TrailingLine
  extends (
    <Component /> // trailing line
  ) {}

class Fragment
  extends (
    /* fragment */ <>
      child
    </>
  ) {}

let Expression = class
  extends (
    <Component /> /* expression */
  ) {};

Expression = class
  extends (
    (
      /* assignment */ <Component />
    )
  ) {};

class Nested
  extends (
    /* nested */ <Component>
      <Child />
    </Component> /* end */
  )
{
  method() {}
}

class Ordinary
  extends /* ordinary */ createClass() {}

class Ignored
  extends (
    /* prettier-ignore */ <Component  unformatted = "value" />
  ) {}

Expression = class
  extends (
    (
      /* long before */ <Component attribute="a long attribute that wraps at narrow widths">
        <Child />
      </Component> /* long after */
    )
  )
{
  method() {}
};

================================================================================
`;

exports[`superclass.jsx format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Leading extends (/* leading */ <Component />) {}

class Trailing extends (<Component /> /* trailing */) {}

class Both extends (/* before */ <Component /> /* after */) {}

class LeadingLine extends (
  // leading line
  <Component />
) {}

class TrailingLine extends (
  <Component /> // trailing line
) {}

class Fragment extends (/* fragment */ <>child</>) {}

let Expression = class extends (<Component /> /* expression */) {};

Expression = class extends (/* assignment */ <Component />) {};

class Nested extends (
  /* nested */ <Component><Child /></Component> /* end */
) {
  method() {}
}

class Ordinary extends (/* ordinary */ createClass()) {}

class Ignored extends (/* prettier-ignore */ <Component  unformatted = "value" />) {}

Expression = class extends (/* long before */ <Component attribute="a long attribute that wraps at narrow widths"><Child /></Component> /* long after */) {
  method() {}
};

=====================================output=====================================
class Leading extends (/* leading */ <Component />) {}

class Trailing extends (<Component /> /* trailing */) {}

class Both extends (/* before */ <Component /> /* after */) {}

class LeadingLine
  extends (
    // leading line
    <Component />
  ) {}

class TrailingLine
  extends (
    <Component /> // trailing line
  ) {}

class Fragment extends (/* fragment */ <>child</>) {}

let Expression = class extends (<Component /> /* expression */) {};

Expression = class extends (/* assignment */ <Component />) {};

class Nested
  extends (
    /* nested */ <Component>
      <Child />
    </Component> /* end */
  )
{
  method() {}
}

class Ordinary extends /* ordinary */ createClass() {}

class Ignored
  extends (/* prettier-ignore */ <Component  unformatted = "value" />) {}

Expression = class
  extends (
    (
      /* long before */ <Component attribute="a long attribute that wraps at narrow widths">
        <Child />
      </Component> /* long after */
    )
  )
{
  method() {}
};

================================================================================
`;
